--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><button type="button">Home</button></li>
+                <li><button type="button">Menu</button></li>
+                <li><button type="button">About</button></li>
+            </ul>
+        </nav>
+        <div id="content"></div>
+    </header>
 </body>
 </html>
