Generate the homepage in JS

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,8 @@
                 <li><button type="button">About</button></li>
             </ul>
         </nav>
-        <div id="content"></div>
+        <div id="content">
+        </div>
     </header>
 </body>
 </html>
