Add tab switching feature

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul>
-                <li><button type="button">Home</button></li>
-                <li><button type="button">Menu</button></li>
-                <li><button type="button">About</button></li>
+                <li><button type="button" id="nav-home">Home</button></li>
+                <li><button type="button" id="nav-menu">Menu</button></li>
+                <li><button type="button" id="nav-about">About</button></li>
             </ul>
         </nav>
         <div id="content">
